2005-04-05  Tim Jenness  <timj@jach.hawaii.edu>

	* All modules: Major rewriting of the internals to use inheritance
	and method importing. This leads to much smaller individual
	translation classes and hopefully will be easier to support with
	less duplication of code. Note that the public function interface
	is unchanged but the public access to variables has been removed
	(and replaced with some class methods).

2005-03-28  Tim Jenness <t.jenness@jach.hawaii.edu>

	* Add GPL to all files

2005-03-17  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/UFTI.pm, HdrTrans/UKIRTDB.pm, HdrTrans/UIST.pm,
	HdrTrans/WFCAM.pm: Handle DATE-OBS and DATE-END headers
	in ISO8601 format.

2005-03-16  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/CGS4.pm: Header keywords for telescope offsets were changed
	from RAOFF/DECOFF to TRAOFF/TDECOFF, so change the translation code
	to reflect this.

2004-12-02  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/JCMT_GSD.pm, HdrTrans/JCMT_GSD_DB.pm: Back
	out the previous change. to_INSTRUMENT method now
	renames RXA3I to RXA3, RXB to RXB3.

2004-11-30  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/JCMT_GSD.pm, HdrTrans/JCMT_GSD_DB.pm: Back
	out previous two changes.

2004-11-30  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/JCMT_GSD.pm, HdrTrans/JCMT_GSD_DB.pm: Change
	to_INSTRUMENT method to rename RXB to RXB3.

2004-11-29  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/JCMT_GSD.pm, HdrTrans/JCMT_GSD_DB.pm: Change
	to_INSTRUMENT method to rename RXA3I to RXA3.

2004-09-13  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* HdrTrans.pm: add WFCAM to list of supported instruments,
	add TILE_NUMBER translated header

	* HdrTrans/WFCAM.pm: initial addition

2004-03-08  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* HdrTrans/JCMT_GSD.pm, HdrTrans/JCMT_GSD_DB.pm: Added
	FTS to list of possible frontends.

2003-09-16 Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>
