@@ -1,3 +1,9 @@
+2005-04-10  Tim Jenness  <tjenness@cpan.org>
+
+	* lib/Astro/FITS/HdrTrans/Base.pm (can_translate): Support regular
+	expression in this_instrument() method. This allows IRCAM to match
+	IRCAM and IRCAM3.
+
 2005-04-05  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* All modules: Major rewriting of the internals to use inheritance
